src/test/ui/issues/issue-55587.stderr
error[E0164]: expected tuple struct/variant, found method `<Path>::new`
  --> $DIR/issue-55587.rs:4:9
   |
LL |     let Path::new();
   |         ^^^^^^^^^^^ not a tuple variant or struct

error: aborting due to previous error

For more information about this error, try `rustc --explain E0164`.
